# Retail-Inventory-and-Finance-System

./: .gitignore  .gitmodules  CMakeLists.txt
include/: cli.h  data_storage.h  input_validator.h  inventory.h  inventory_handling.h  my_sort.h  product.h
lib/: CMakeLists.txt
lib/libfio/: CMakeLists.txt
lib/libfio/include/: libfio.h
lib/libfio/src/: libfio.c
lib/libhashmap/: CMakeLists.txt
lib/libhashmap/include/: hashmap_functions.h  m_hashmap.h
lib/libhashmap/includes/: hashmap_functions.h  m_hashmap.h
lib/libhashmap/src/: hashmap.c
lib/libsort/: CMakeLists.txt
lib/libsort/include/: m_sort.h
lib/libsort/src/: quicksort.c
lib/libvector/: CMakeLists.txt
lib/libvector/include/: my_vector.h
lib/libvector/src/: vector.c
src/: CMakeLists.txt  inventory.c  main.c  product_data.c
src/cli/: cli.c  input_validator.c  inventory_handling.c
src/core/: data_storage.c  inventory.c  inventory_hashmap.c  inventory_vector.c
